--- a/lab01/CENG241_Lab_01.tex
+++ b/lab01/CENG241_Lab_01.tex
@@ -235,22 +235,28 @@ A01 - B03\\[1.5cm]
 \end{sidewaysfigure}
 
 {\em rise and fall time of critically damped wave}
-\begin{sidewaysfigure}[h]
+\begin{figure}[h]
 	\centering
 	\subfigure[Rise time]
 	{
-		\includegraphics[width=0.475\textwidth, draft=false]{risetime}
+		\includegraphics[width=0.95\textwidth, draft=false]{risetime}
 	}
 	\subfigure[Fall time]
 	{
-		\includegraphics[width=0.475\textwidth, draft=false]{falltime}
+		\includegraphics[width=0.95\textwidth, draft=false]{falltime}
 	}
 	\caption{Opposite edges of a critically damped square wave}
 	\label{fig:rise_fall}
-\end{sidewaysfigure}
+\end{figure}
 
 \section{LEDs and Inverters}
 {\em When is the LED lit?}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.6, draft=false]{inverter}
+	\caption{Controlling an LED with a LS7405 inverter.}
+	\label{fig:inverter}
+\end{figure}
 
 {\em Why use a 7405, not a 7404? (ordinary inverter v. open collector inverter)}
 
@@ -266,8 +272,8 @@ A01 - B03\\[1.5cm]
 {\em Draw a debouncer with NOR gates}
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.95\textwidth, draft=true]{nor_gates}
-	\caption{An SPDT debouncer constructed from NOR gates}
+	\includegraphics[scale=0.5, draft=false]{nor_gates}
+	\caption{An SPDT debouncer constructed from NOR gates. For clarity, VCC and ground for gates are not connected in figure.}
 	\label{fig:nor_gates}
 \end{figure}
 
