Units and image placement fixed
Used siunitx package to help with units. It’s pretty nifty.

Kind of sorted out the image displays. All scope figures come after the
conclusion. Schematics are where they should be.

--- a/lab01/CENG241_Lab_01.tex
+++ b/lab01/CENG241_Lab_01.tex
@@ -203,11 +203,11 @@ This lab serves as an introduction to basic digital components and circuits. The
 			\textcol{$I_{in}$ (mA)} &
 			\textcol{$I_{out}$ (mA)} &
 			\textcol{$P$ (mW)} &
-			\textcol{$T$ ($^{\circ}$C)} \\
+			\textcol{$T$ (\si{\celsius})} \\
 		\midrule
-		0.0	& 2\e{-5}	& 2\e{-4}	& 2\e{-4}	& N/A & 22.9 \\
-		1.0	& 1.5\e{-5}	& 2\e{-4}	& 2\e{-4}	& N/A & 22.9 \\
-		2.0	& 4.3\e{-4}	& 6\e{-4}	& 6\e{-4}	& N/A & 23.3 \\
+		0.0	& 2e-5		& 2e-4		& 2e-4		& N/A & 22.9 \\
+		1.0	& 1.5e-5	& 2e-4		& 2e-4		& N/A & 22.9 \\
+		2.0	& 4.3e-4	& 6e-4		& 6e-4		& N/A & 23.3 \\
 		3.0	& 1.5913	& 1.599		& 1.599		& 2.25 & 23.0 \\
 		4.0	& 2.5057	& 2.5143	& 2.5143	& 3.76 & 23.2 \\
 		5.0	& 3.662		& 3.6758	& 3.6758	& 4.92 & 23.4 \\
@@ -224,13 +224,49 @@ This lab serves as an introduction to basic digital components and circuits. The
 	\label{table:regulator}
 \end{table}
 
-The voltage regulator regulated the output voltage to 5$V$ $+/-$ .3$V$ for input voltages between 6.0$V$ and 12.0$V$. As we can see in Table ~\ref{table:regulator}, when the power supply was set to below 3.0$V$ only stray voltages and currents were present; the voltage regulator blocked insufficient voltages and currents. As the regulator worked to regulate the voltage its power consumption increased, which was evident by the heat dissipated.   
+The voltage regulator regulated the output voltage to \SI{5.0 +- 0.3}{\volt} for input voltages between \SI{6.0}{\volt} and \SI{12.0}{\volt}. As we can see in Table \ref{table:regulator}, when the power supply was set to below \SI{3.0}{\volt} only stray voltages and currents were present; the voltage regulator blocked insufficient voltages and currents. As the regulator worked to regulate the voltage its power consumption increased, which was evident by the heat dissipated.   
 
-Next, the output of the voltage regulator was shorted to ground. Initially, the power supply was set to 8$V$ and 200$mA$; however, the power supply limited the voltage and current to 2.7$V$ and 130$mA$ due to its short circuit protection. The regulator controlled the output to 64.47$mV$ and 136$mA$, while increasing its operating temperature from room temperature to $44.8\,^{\circ}\mathrm{C}$
+Next, the output of the voltage regulator was shorted to ground. Initially, the power supply was set to \SI{8}{V} and \SI{200}{mA}; however, the power supply limited the voltage and current to \SI{2.7}{\volt} and \SI{130}{mA} due to its short circuit protection. The regulator controlled the output to \SI{64.47}{\milli\volt} and \SI{136}{\milli\ampere}, while increasing its operating temperature from room temperature to \SI{44.8}{\celsius}.
 
 \section{Signal damping}
 
-Figure \ref{fig:damping} displays examples of over-damped, under-damped, and critically damped waveforms. Properly tuned oscilloscope probes will display a critically damped waveform when tested, and they should be tested prior to every use.
+Figure \ref{fig:damping} displays\footnote{Oscilloscope screen captures are included after the conclusion.} examples of over-damped, under-damped, and critically damped waveforms. Properly tuned oscilloscope probes will display a critically damped waveform when tested, and they should be tested prior to every use.
+
+Figure \ref{fig:rise_fall} illustrates the rise and fall time of critically tuned probes.  The rise and fall times were both calculated to be \SI{1.00 +- 0.04}{\micro\second}.
+
+\section{LEDs and Inverters}
+
+The LED illuminated in the absence of the signal voltage, while it extinguished at the presence of it. Since the signal voltage was inverted, the LED was connected to the source voltage and the circuit was completed only at the absence of a signal.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.6, draft=false]{inverter}
+	\caption{Controlling an LED with a LS7405 inverter.}
+	\label{fig:inverter}
+\end{figure}
+
+******** I'm not sure about the following one Tyler. Does my reasoning make sense? **********
+
+The 7405 inverter features open collector outputs, while the 7404 does not. The 7404 inverter connects internally the $V_{cc}$ to the output by way of an internal transistor through a \SI{130}{\ohm} resistor. Our circuit configuration would then place a parallel run with the LED and external \SI{1}{\kilo\ohm} resistor. Since the current will chose the path of least resistance, there would not be enough current to power the LED. 
+
+\section{Push button debouncing}
+
+Figure \ref{fig:debounce} displays the debounced and non-debounced waveforms from activating the push button debouncer. The debounced signal appears cleaner than the non-debounced signal which would lead to more accurate circuit performance and results.
+
+A debouncer can be implemented using NOR gates, figure \ref{fig:nor_gates} illustrates such a circuit. 
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5, draft=false]{nor_gates}
+	\caption{An SPDT debouncer constructed from NOR gates. For clarity, VCC and ground for gates are not connected in figure.}
+	\label{fig:nor_gates}
+\end{figure}
+
+\section{Conclusion}
+
+While being introductory, the circuits explored in this lab performed as expected. The voltage regulator dissipates heat fast under extreme circumstances, but its temperature only increases gradually when used under normal conditions. Also, circuits can be analyzed cleanly with properly tuned oscilloscope probes, an status circuit with LED, and a debouncer. These items help to expedite and facilitate troubleshooting.
+
+\section*{Oscilloscope screen captures}
 
 \begin{sidewaysfigure}[h]
 	\centering
@@ -250,8 +286,6 @@ Figure \ref{fig:damping} displays examples of over-damped, under-damped, and cri
 	\label{fig:damping}
 \end{sidewaysfigure}
 
-Figure \ref{fig:rise_fall} illustrates the rise and fall time of critically tuned probes.  The rise and fall times were both calculated to be 1${\mu}s$ $+/-$ .04${\mu}s$.
-
 \begin{figure}[h]
 	\centering
 	\subfigure[Rise time]
@@ -266,43 +300,11 @@ Figure \ref{fig:rise_fall} illustrates the rise and fall time of critically tune
 	\label{fig:rise_fall}
 \end{figure}
 
-\section{LEDs and Inverters}
-
-The LED illuminated in the absence of the signal voltage, while it extinguished at the presence of it. Since the signal voltage was inverted, the LED was connected to the source voltage and the circuit was completed only at the absence of a signal.
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[scale=0.6, draft=false]{inverter}
-	\caption{Controlling an LED with a LS7405 inverter.}
-	\label{fig:inverter}
-\end{figure}
-
-******** I'm not sure about the following one Tyler. Does my reasoning make sense? **********
-
-The 7405 inverter features open collector outputs, while the 7404 does not. The 7404 inverter connects internally the $V_{cc}$ to the output by way of an internal transistor through a 130${\Omega}$ resistor. Our circuit configuration would then place a parallel run with the LED and external 1k${\Omega}$ resistor. Since the current will chose the path of least resistance, there would not be enough current to power the LED. 
-
-\section{Push button debouncing}
-
-Figure \ref{fig:debounce} displays the debounced and non-debounced waveforms from activating the push button debouncer. The debounced signal appears cleaner than the non-debounced signal which would lead to more accurate circuit performance and results.
-
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.95\textwidth, draft=false]{debounce}
 	\caption{Waveforms of non-debounced (top) and debounced (bottom) SPDT presses}
 	\label{fig:debounce}
 \end{figure}
-
-A debouncer can be implemented using NOR gates, figure \ref{fig:nor_gates} illustrates such a circuit. 
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[scale=0.5, draft=false]{nor_gates}
-	\caption{An SPDT debouncer constructed from NOR gates. For clarity, VCC and ground for gates are not connected in figure.}
-	\label{fig:nor_gates}
-\end{figure}
-
-\section{Conclusion}
-
-While being introductory, the circuits explored in this lab performed as expected. The voltage regulator dissipates heat fast under extreme circumstances, but its temperature only increases gradually when used under normal conditions. Also, circuits can be analyzed cleanly with properly tuned oscilloscope probes, an status circuit with LED, and a debouncer. These items help to expedite and facilitate troubleshooting.
 
 \end{document}
