--- a/lab02/CENG241_lab_02.tex
+++ b/lab02/CENG241_lab_02.tex
@@ -210,7 +210,7 @@ The second lab serves as a learning environment for the Xilinx ISE (integrated s
 
 \section{Results}
 
-The following figures are snapshots obtained during this lab. A half adder is illustrated by the schematic method in figure \ref{fig:schematic}, while figure \ref{fig:functional_sim} shows the functional simulation of the design.
+The following figures are snapshots obtained during this lab. A half adder is illustrated by the schematic in Figure \ref{fig:schematic}. The functional simulation in Figure \ref{fig:functional_sim} shows the expected output from the circuit based on user-defined input. Outputs $S$ and $C$ are shown for all combinations of binary inputs $X$ and $Y$.
 
 \begin{figure}[htbp]
 	\centering
@@ -226,7 +226,7 @@ The following figures are snapshots obtained during this lab. A half adder is il
 	\label{fig:functional_sim}
 \end{figure}
 
-The Verilog HDL code for a half adder is shown in the figure below, while the post place-and-route timing simulator is shown if figure \ref{fig:timing}. The timing simulation is similar to the functional simulation, but indicates a 8.9ns delay.
+The Verilog HDL code for a half adder is shown in the code block below, while the post place-and-route timing simulator is shown if Figure \ref{fig:timing}. An FPGA is programmed according to the verilog module, which is used to determine the runtime delay of the half adder. Figure \ref{fig:timing} indicates that both outputs will arrive 8.9 ns after the inputs.
 
 \hspace{1cm}
 
@@ -245,7 +245,7 @@ The Verilog HDL code for a half adder is shown in the figure below, while the po
 
 The digital design entry methods explored were the schematic and Verilog HDL. The Verilog HDL seemed to be more efficient testing logic assuming a proper boolean function was available. This method produces quick results for any size circuit, but could be prone to error due to not being able to visualize the circuit. The schematic method is tedious for anything but few component circuits, but enables visualization which may help troubleshooting.
 
-A functional simulation tests the logic of a circuit with no consideration on circuit timing and delays. Timing simulations, meanwhile, test the functionality of circuits with any routing and logic delay considered to give proper results. Functional simulation are not sufficient to ensure the correctness of designs.
+A functional simulation tests the logic of a circuit with no consideration on circuit timing and delays. Timing simulations, meanwhile, test the functionality of circuits with any routing and logic delay considered to give proper results. Functional simulations can only ensure that the logic of the circuit is correct but give no insight about delays arising from timing problems.
 
 
 
