--- a/lab03/CENG241_lab_03.tex
+++ b/lab03/CENG241_lab_03.tex
@@ -360,8 +360,11 @@ A01 - B03\\[1.5cm]
 %----------------------------------------------------------------------------
 
 \section{Introduction}
+Combinational circuits can be used to multiply binary numbers. One method is to chain full adders to reproduce the bit-wise multiplication of the numbers. The full adder uses some logic gates, such as XOR, which may not be readily available. This lab will explore the creation of a $2 \times 2$ bit multiplier using only NAND and INV gates.
 
 \section{Discussion}
+\subsection{Determining logical expressions for multiplication output}
+Table \ref{table:truth_table} contains the truth table for multiplication where $X_0$ is the LSB. The expressions for $C_i$ can be represented as Karnaugh maps, as shown in Figure \ref{fig:k_maps}.
 
 \begin{table}[h]
 	\centering
@@ -387,8 +390,11 @@ A01 - B03\\[1.5cm]
 		1 & 1 & 1 & 1 & 1 & 0 & 0 & 1 \\
 		\bottomrule
 	\end{tabular}
-	\caption{Truth table for 2-bit by 2-bit multiplier}
+	\caption{Truth table for $ 2 \times 2 $ bit multiplier}
+	\label{table:truth_table}
 \end{table}
+
+%\pagebreak
 
 \begin{figure}
 	\centering
@@ -429,15 +435,19 @@ A01 - B03\\[1.5cm]
 		\end{Karnaugh4x4}
 	}
 	\caption{Karnaugh maps and term groupings for product terms $C_i$}
+	\label{fig:k_maps}
 \end{figure}
 
+Grouping the minterms in the Karnaugh maps gives the following boolean expressions for $C_i$:
 \begin{align*}
 	C_0 &= A_0 B_0 \\
 	C_1 &= A_1 B_1^{\prime} B_0 + A_1 A_0^{\prime} B_0 + A_1^{\prime} A_0 B_1 + A_0 B_1 B_0^{\prime} \\
 	C_2 &= A_1 B_1 B_0^{\prime} + A_1 A_0^{\prime} B_1 \\
-	C_3 &= A_1 A_0 B_1 B_0 \\
+	C_3 &= A_1 A_0 B_1 B_0. \\
 \end{align*}	
 
+\subsection{Designing and testing the schematic}
+The key to designing the schematic is to recognize that a NAND gate and an OR gate with inverted inputs are identical. Hence, the AND and OR gates in $C_1$ and $C_2$ are replaced with NAND gates. Since $C_0$ and $C_3$ have no corresponding OR, the output of the NAND is passed through an inverter to make the output equivalent to an AND. Figure \ref{fig:schematic} shows the complete schematic of the multiplier.
 
 \begin{figure}[htbp]
 	\centering
@@ -446,6 +456,8 @@ A01 - B03\\[1.5cm]
 	\label{fig:schematic}
 \end{figure}
 
+This schematic was tested in Xilinx to confirm that its output matched Table \ref{table:truth_table}. The functional simulation in Figure \ref{fig:functional_sim} confirms that the schematic will give the desired output.
+
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=0.95\textwidth, draft=false]{functional_sim}
@@ -453,6 +465,12 @@ A01 - B03\\[1.5cm]
 	\label{fig:functional_sim}
 \end{figure}
 
-{\em A general discussion of the design and the lab}
+\subsection{Building the multiplier}
+Since each expression for $C_i$ is independent, the circuits were built one at a time. This simplified testing the design by reducing the number of ICs and wires on the board at one time. The smaller circuit was easier to construct and to debug.
+
+The output of the multiplication term was passed through an LED where an illumination indicated logic high. Building each of the circuits in sequence and testing it with the sixteen possible input combinations confirmed the results of the functional simulation.
+
+\section{Conclusion}
+This lab confirmed that it is possible to built a $2 \times 2$ bit multiplier with only NAND and INV gates.
 
 \end{document}
