Small conclusion elaboration

--- a/lab03/CENG241_lab_03.tex
+++ b/lab03/CENG241_lab_03.tex
@@ -466,11 +466,11 @@ This schematic was tested in Xilinx to confirm that its output matched Table \re
 \end{figure}
 
 \subsection{Building the multiplier}
-Since each expression for $C_i$ is independent, the circuits were built one at a time. This simplified testing the design by reducing the number of ICs and wires on the board at one time. The smaller circuit was easier to construct and to debug.
+Since each expression for $C_i$ is independent, the circuits were built one at a time. This simplified testing the design by reducing the number of ICs and wires on the board at one time. The smaller circuit was easier to construct and to debug. 
 
 The output of the multiplication term was passed through an LED where an illumination indicated logic high. Building each of the circuits in sequence and testing it with the sixteen possible input combinations confirmed the results of the functional simulation.
 
 \section{Conclusion}
-This lab confirmed that it is possible to built a $2 \times 2$ bit multiplier with only NAND and INV gates.
+This lab confirmed that it is possible to built a $2 \times 2$ bit multiplier with only NAND and INV gates. Due to the large number of connections between ICs, building the circuit out of actually existing gates is exceedingly difficult without confirmation of intermediary results.
 
 \end{document}
